@@ -30,16 +30,26 @@ class Opportunity < ActiveRecord::Base
   has_one :account, :through => :account_opportunity
   has_many :contact_opportunities, :dependent => :destroy
   has_many :contacts, :through => :contact_opportunities, :uniq => true
+  has_many :permissions, :as => :asset, :include => :user
   uses_mysql_uuid
   acts_as_paranoid
 
   validates_presence_of :name, :message => "^Please specify the opportunity name."
   validates_uniqueness_of :name, :scope => :user_id
   validates_numericality_of [ :probability, :amount, :discount ], :allow_nil => true
+  validate :users_for_shared_access
 
   #----------------------------------------------------------------------------
   def weighted_amount
     (amount || 0) * (probability || 0) / 100.0
+  end
+
+  # Backend handler for [Create New Opportunity] form (see opportunity/create).
+  #----------------------------------------------------------------------------
+  def save_with_account_and_permissions(params)
+    account = Account.create_or_select_for(self, params[:account], params[:users])
+    self.account_opportunity = AccountOpportunity.new(:account => account, :opportunity => self) unless account.id.blank?
+    save_with_permissions(params[:users])
   end
 
   # Save the opportunity along with its permissions if any.
@@ -79,6 +89,13 @@ class Opportunity < ActiveRecord::Base
       end
     end
     opportunity
+  end
+
+  private
+  # Make sure at least one user has been selected if the contact is being shared.
+  #----------------------------------------------------------------------------
+  def users_for_shared_access
+    errors.add(:access, "^Please specify users to share the opportunity with.") if self[:access] == "Shared" && !self.permissions.any?
   end
 
 end
